--- a/app/views/orders/show.html.erb
+++ b/app/views/orders/show.html.erb
@@ -6,6 +6,39 @@
 
   <div class="order-summary jumbotron">
     <h4>Thank you for your order!</h4>
+  
+    <section class="cart-show">
+
+    <header class="page-header">
+      <h1>Your Order</h1>
+    </header>
+      <div class="panel panel-default items">
+        <table class="table table-bordered">
+        
+          <thead>
+            <tr>
+              <th colspan="2">Product</th>
+              <th>Unit Price</th>
+              <th>Quantity</th>
+              <th>Price</th>
+            </tr>
+          </thead>
+          <tbody>
+              <%= render 'item', items_in_order: @items_in_order%>
+          </tbody>
+          <tfoot>
+            <tr>
+              <th colspan="4">
+                TOTAL:
+              </th>
+              <th>
+                <%=humanized_money_with_symbol @order.total%>
+              </th>
+            </tr>
+          </tfoot>
+        </table>
+      </div>
+    </div>
   </div>
 
   <%= link_to "Continue Shopping", root_path, class: 'btn btn-lg btn-primary' %>
